--- a/index.html
+++ b/index.html
@@ -1,8 +1,28 @@
 <!DOCTYPE html>
 <head>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dokdo&display=swap" rel="stylesheet">
     <link rel = "Stylesheet" href = "style.css" type = "text/css">
     <body>
-        <h1> THE BAJS</h1>
+        <nav>
+            <h1 class = "top-head">
+                THE BAJS</h1>
+            <h2 class = 'top-head'>
+                <a href ="#">BAND</a>
+                <a href ="#">TOUR</a>
+                <a href ="#">SHOP</a>
+            </h2>
+            <div class = 'top-head'>
+                <a href = '#'>
+                    <i class="fa-thin fa-twitter"></i>
+                </a>
+                <a href = '#'>
+                    <i class="fa-brands fa-twitch"></i>
+                </a>
+                <a href = '#'>
+                    <i class="fa-brands fa-discord"></i>
+                </a>
+            </div>
+        </nav>
     </body>
 </head>
