update to header

--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <head>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/377d809d75.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Dokdo&display=swap" rel="stylesheet">
-    <link rel = "Stylesheet" href = "style.css" type = "text/css">
+    <link rel = "Stylesheet" href = "normalize.css" type = "text/css">
     <body>
         <nav>
-            <h1 class = "top-head">
+            <h1 class = "top-head" id ='logo'>
                 THE BAJS</h1>
-            <h2 class = 'top-head'>
+            <h2 class = 'top-head' id ='link'>
                 <a href ="#">BAND</a>
                 <a href ="#">TOUR</a>
                 <a href ="#">SHOP</a>
             </h2>
-            <div class = 'top-head'>
-                <a href = '#'>
-                    <i class="fa-thin fa-twitter"></i>
-                </a>
+            <div class = 'top-head' id ='social'>
                 <a href = '#'>
                     <i class="fa-brands fa-twitch"></i>
+                </a>
+                <a href = '#'>
+                    <i class="fa-brands fa-twitter"></i>
                 </a>
                 <a href = '#'>
                     <i class="fa-brands fa-discord"></i>
