--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <body>
         <nav>
             <h1 class = "top-head" id ='logo'>
-                THE BAJS</h1>
+                THE BAJS
+            </h1>
             <h2 class = 'top-head' id ='link'>
                 <a href ="#">BAND</a>
                 <a href ="#">TOUR</a>
