--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
                 </a>
             </div>
         </nav>
+        <video autoplay muted loop id="BandPlay">
+            <source src='Band.mp4' type="video/mp4">
+        </video>        
     </body>
 </head>
