Made band bg invisible

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel = "Stylesheet" href = "normalize.css" type = "text/css">
     <body>
         <nav>
-            <h1 class = "top-head" id ='logo'>
+            <h1 class = "top-head" id ='logo' href="top">
                 THE BAJS
             </h1>
             <h2 class = 'top-head' id ='link'>
@@ -14,19 +14,19 @@
                 <a href ="#">SHOP</a>
             </h2>
             <div class = 'top-head' id ='social'>
-                <a href = '#'>
+                <a href = 'https://www.twitch.tv/forsen'>
                     <i class="fa-brands fa-twitch"></i>
                 </a>
-                <a href = '#'>
+                <a href = 'https://twitter.com/forsen'>
                     <i class="fa-brands fa-twitter"></i>
                 </a>
-                <a href = '#'>
+                <a href = 'https://discord.gg/forsen'>
                     <i class="fa-brands fa-discord"></i>
                 </a>
             </div>
         </nav>
-        <video autoplay muted loop id="BandPlay">
-            <source src='Band.mp4' type="video/mp4">
-        </video>        
-    </body>
+        <grid>
+            <img src ='3x_8.gif' id="BandPlay">
+        </grid>               
+    </body> 
 </head>
