Functioning nav bar. Updated wireframing

--- a/band.html
+++ b/band.html
@@ -5,13 +5,13 @@
     <link rel = "Stylesheet" href = "normalize.css" type = "text/css">
     <body>
         <nav>
-            <h1 class = "top-head" id ='logo' href="top">
+            <a class = "top-head" id ='logo' href="home.html">
                 THE BAJS
-            </h1>
+            </a>
             <h2 class = 'top-head' id ='link'>
-                <a href ="#">BAND</a>
-                <a href ="#">TOUR</a>
-                <a href ="#">SHOP</a>
+                <a href ="band.html">BAND</a>
+                <a href ="tour.html">TOUR</a>
+                <a href ="shop.html">SHOP</a>
             </h2>
             <div class = 'top-head' id ='social'>
                 <a href = 'https://www.twitch.tv/forsen'>
@@ -24,9 +24,6 @@
                     <i class="fa-brands fa-discord"></i>
                 </a>
             </div>
-        </nav>
-        <grid>
-            <img src ='3x_8.gif' id="BandPlay">
-        </grid>               
-    </body> 
+        </nav>        
+    </body>
 </head>
