--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel = "Stylesheet" href = "normalize.css" type = "text/css">
     <body>
         <nav>
-            <a class = "top-head" id ='logo' href="home.html">
+            <a class = "top-head" id ='logo' href="index.html">
                 THE BAJS
             </a>
             <h2 class = 'top-head' id ='link'>
@@ -27,6 +27,9 @@
         </nav>
         <grid>
             <img src ='3x_8.gif' id="BandPlay">
+            <div class = 'paragraph'>
+                <p>Some text...</p>
+            </div>
         </grid>               
     </body> 
 </head>
