--- a/tour.html
+++ b/tour.html
@@ -5,7 +5,7 @@
     <link rel = "Stylesheet" href = "normalize.css" type = "text/css">
     <body>
         <nav>
-            <a class = "top-head" id ='logo' href="home.html">
+            <a class = "top-head" id ='logo' href="index.html">
                 THE BAJS
             </a>
             <h2 class = 'top-head' id ='link'>
