Band page completed

--- a/band.html
+++ b/band.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <head>
     <script src="https://kit.fontawesome.com/377d809d75.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Dokdo&display=swap" rel="stylesheet">
-    <link rel = "Stylesheet" href = "normalize.css" type = "text/css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Dokdo&family=Nova+Mono&family=Oswald:wght@200&family=Solway:wght@300&family=Source+Code+Pro:wght@200&family=Yeseva+One&display=swap" rel="stylesheet">
+    <link rel = "Stylesheet" href = "style.css" type = "text/css">
     <body>
         <nav>
             <a class = "top-head" id ='logo' href="index.html">
-                THE BAJS
+            THE BAJS
             </a>
             <h2 class = 'top-head' id ='link'>
                 <a href ="band.html">BAND</a>
@@ -24,6 +25,85 @@
                     <i class="fa-brands fa-discord"></i>
                 </a>
             </div>
-        </nav>        
+        </nav>
+        <div class = 'profile'>
+            <div class = 'image' style = 'background-image: url("Sebastian.png");'></div>           
+            <div class = 'text'>
+                <h2 id = 'Sebastian'>Sebastian</h2>
+                <p>
+                    <span>Lead vocalist of The Bajs, and lead of the band. His charm and energy is what brings the band together. 
+                        Fellow members would often call him by his nickname "Forsen"</span>
+                </p>
+                <p>
+                    <span>"As a wise man once told me...that wise man was me"</span>
+                </p>
+            </div>
+        </div>
+        <div class = 'profile'>    
+            <div class = 'text'>
+                <h2 id = 'Moshi'><em>Moshi</em></h2>
+                <p>
+                    <span>Youngest member of the band. His youthfulness livens up the atmosphere. Moshi
+                         is a laidback individual, in contrast to his explosive self on the drums.
+                    </span>
+                </p>
+                <p>
+                    <span>"Drain gang!!"</span>
+                </p>
+            </div>
+            <div class = 'image' style = 'background-image: url("Moshi.png");'></div>
+        </div>     
+        <div class = 'profile'>
+            <div class = 'image' style = 'background-image: url("Apollon.jpg");'></div>
+            <div class = 'text'>
+                <h2 id = 'Apollon'>Apollon</h2>
+                <p>
+                    <span>Being on the keys doesn't stop Apollon from being flamboyant, exuding confidence and fervor with his stride.
+                     He likes to spend his time bodybuilding.
+                    </span>
+                </p>
+                <p>
+                    <span>"I am not bound to succeed, but I am bound to live up to the light that I have."</span>
+                </p>
+            </div>
+        </div>
+        <div class = 'profile'>    
+            <div class = 'text'>
+                <h2 id = 'Lagoo'>Lagoo</h2>
+                <p>
+                    <span>Age is just a number and that hasn't stop Lagoo from being an oldie strumming it out. 
+                        The members see him as wises of them all.
+                    </span>
+                </p>
+                <p>
+                    <span>"Hey buddy, I think you've got the wrong door, the leather club's two blocks down."</span>
+                </p>
+            </div>
+            <div class = 'image' style = 'background-image: url("Lagoo.png");'></div>
+        </div>   
+        <div class = 'profile'>
+            <div class = 'image' style = 'background-image: url("Mlemao.jpg");'></div>
+            <div class = 'text'>
+                <h2 id = 'Mlemao'>Mlemao</h2>
+                <p>
+                    <span>Weird wouldn't cut it for Mlemao...but his guitar skills are undeniable.
+                        Mlemao is a loud chatterbox and isn't afriad to speak his mind. Frog is his spirit animal.
+                    </span>
+                </p>
+                <p>
+                    <span>"Big Chungus Theme song by Forsen"</span>
+                </p>
+            </div>
+        </div>
+        <h1 class = 'history'>HISTORY</h1>
+        <p id = 'historyText'>
+            <span>The band's humble beginning started in 2015, brought on together by a manager and promoted as an international band with the members being Swedish, French and American. 
+                In 2017, the band gained traction, having sold 45,000 on their first album. The band went into hiatus 2018 due to band member, Sebastian, undergoing vocal surgery but recovered and made a quick comeback for early 2020. 
+                In late 2020, the band got to perform at the prestigious stadium, Great Strahov Stadium. As of 2022, the band is estimated to have 1.64 million fans worldwide and have sold over 100 million copies of their music.</span>
+        </p>
+        <div class = footerWrap>
+            <div>@2022 THE BAJS</div>
+         </div> 
+        <script src = 'script.js'></script>         
     </body>
 </head>
