--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
             <h1 id="sectionHead" class = 'headBg'>TOUR</h1>
             <div class = 'tourHead'>
                 <div class = 'tourRow'>
-                    <div>23 MAR 2024</div>
-                    <div>Umeå,SW</div>
+                    <div>23 MAR 2023</div>
+                    <div id = 'country'>Umeå,SW</div>
                     <div>NOLIA AB</div>
                 </div>        
                 <div class = 'tourRow'>
-                    <div>17 JUN 2024</div>
-                    <div>PARIS,FR</div>
+                    <div>17 JUN 2023</div>
+                    <div id = 'country'>PARIS,FR</div>
                     <div>STADE DE FRANCE</div>
                 </div> 
                 <div class = 'tourRow'>
-                    <div>21 JUN 2024</div>
-                    <div>COPENHAGEN,DK</div>
+                    <div>21 JUN 2023</div>
+                    <div id = 'country'>COPENHAGEN,DK</div>
                     <div>PARKEN STADIUM</div>
                 </div>   
                 <a id = 'ticketButton' href = 'tour.html'>GET TICKETS</a>  
@@ -71,19 +71,6 @@
                 <div>@2022 THE BAJS</div>
              </div>            
         </main>
-        <script>
-            window.onscroll = function() {myFunction()};
-            var nav = document.querySelector("nav");
-            var sticky = nav.offsetTop;
-
-            function myFunction() {
-                if (window.pageYOffset > sticky) {
-                    nav.classList.add("sticky")
-                }
-                else {
-                    nav.classList.remove("sticky")
-                }
-            }
-        </script>               
+        <script src = 'script.js'></script>               
     </body> 
 </head>
