--- a/shop.html
+++ b/shop.html
@@ -6,7 +6,7 @@
     <body>
         <nav>
             <a class = "top-head" id ='logo' href="index.html">
-                THE BAJS
+            THE BAJS
             </a>
             <h2 class = 'top-head' id ='link'>
                 <a href ="band.html">BAND</a>
@@ -24,6 +24,7 @@
                     <i class="fa-brands fa-discord"></i>
                 </a>
             </div>
-        </nav>        
+        </nav>  
+        <script src = 'script.js'></script>         
     </body>
 </head>
