Improve on shop page

--- a/band.html
+++ b/band.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<head>
-    <script src="https://kit.fontawesome.com/377d809d75.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Dokdo&family=Nova+Mono&family=Oswald:wght@200&family=Solway:wght@300&family=Source+Code+Pro:wght@200&family=Yeseva+One&display=swap" rel="stylesheet">
-    <link rel = "Stylesheet" href = "style.css" type = "text/css">
+<html lang = en>
+    <head>
+        <meta charset="UTF-8">
+        <title>The Bajs band info</title> 
+        <script src="https://kit.fontawesome.com/377d809d75.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Dokdo&family=Nova+Mono&family=Oswald:wght@200&family=Solway:wght@300&family=Source+Code+Pro:wght@200&family=Yeseva+One&display=swap" rel="stylesheet">
+        <link rel = "Stylesheet" href = "style.css" type = "text/css">
+    </head>
     <body>
         <nav>
             <a class = "top-head" id ='logo' href="index.html">
@@ -91,7 +95,7 @@
                     </span>
                 </p>
                 <p>
-                    <span>"Big Chungus Theme song by Forsen"</span>
+                    <span>"Hmm..."</span>
                 </p>
             </div>
         </div>
@@ -106,4 +110,3 @@
          </div> 
         <script src = 'script.js'></script>         
     </body>
-</head>
