--- a/shop.html
+++ b/shop.html
@@ -2,7 +2,7 @@
 <head>
     <script src="https://kit.fontawesome.com/377d809d75.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Dokdo&display=swap" rel="stylesheet">
-    <link rel = "Stylesheet" href = "normalize.css" type = "text/css">
+    <link rel = "Stylesheet" href = "style.css" type = "text/css">
     <body>
         <nav>
             <a class = "top-head" id ='logo' href="index.html">
@@ -25,6 +25,31 @@
                 </a>
             </div>
         </nav>  
-        <script src = 'script.js'></script>         
+        <grid class = 'merchDisplay'>
+            <div class = 'merch1'>
+                <img src = 'poster1.png' id = 'brr'>
+                <h2>THE BAJS POSTER</h2>
+                <P>$20.00</P>
+            </div>
+            <div class = 'merch2'>2</div>
+            <div class = 'merch3'>3</div>
+            <div class = 'merch4'>4</div>
+            <div class = 'merch5'>5</div>
+            <div class = 'merch6'>6</div>
+            <div class = 'merch7'>7</div>
+            <div class = 'merch8'>8</div>
+            <div class = 'merch9'>9</div>
+            
+        </grid>         
+        <button onclick = 'scrollFunction()' id = 'buttonTop'> Back to top</button>
+        <div class = footerWrap>
+            <div>@2022 THE BAJS</div>
+         </div> 
+        <script>
+            function scrollFunction() {
+                document.body.scrollTop = 0;
+                document.documentElement.scrollTop = 0;
+            }
+        </script>
     </body>
 </head>
