Completed tour page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Dokdo&family=Sono:wght@200&display=swap" rel="stylesheet">
         <link rel = "Stylesheet" href = "normalize.css" type = "text/css">
     </head>
-    <body>
+    <body>  
         <nav>
             <a class = "top-head" id ='logo' href="index.html">
             THE BAJS
@@ -30,7 +30,7 @@
             </div>
         </nav>
         <main>            
-            <img src ='staticBand.gif' id="BandPlay" onclick="this.src = 'playBand.gif'" alt = 'The Bajs performinh'>
+            <img src ='staticBand.gif' id="BandPlay" onclick="this.src = 'playBand.gif'" alt = 'The Bajs performing'>
             <h1 class="sectionHead">MUSIC</h1>            
             <div class = 'iframeWrap'>
                 <iframe src="https://www.youtube.com/embed/-GEHyAfV4OI" title="Debut Music" allowfullscreen></iframe>            
@@ -47,20 +47,20 @@
             <h1 class="sectionHead headBg">TOUR</h1>
             <div class = 'tourHead'>
                 <div class = 'tourRow'>
-                    <div>23 MAR 2023</div>
+                    <div class = 'date'>16 JUN 2023</div>
                     <div class = 'country'>Umeå,SW</div>
-                    <div>NOLIA AB</div>
+                    <div class = 'venue'>NOLIA AB</div>
                 </div>        
                 <div class = 'tourRow'>
-                    <div>17 JUN 2023</div>
-                    <div class = 'country'>PARIS,FR</div>
-                    <div>STADE DE FRANCE</div>
-                </div> 
-                <div class = 'tourRow'>
-                    <div>21 JUN 2023</div>
+                    <div class = 'date'>19 JUN 2023</div>
                     <div class = 'country'>COPENHAGEN,DK</div>
-                    <div>PARKEN STADIUM</div>
-                </div>   
+                    <div class = 'venue'>PARKEN STADIUM</div>
+                </div>
+                    <div class = 'tourRow'>
+                    <div class = 'date'>23 JUN 2023</div>
+                    <div class = 'country'>PARIS,FR</div>
+                    <div class = 'venue'>STADE DE FRANCE</div>
+                </div>    
                 <a id = 'ticketButton' href = 'tour.html'>GET TICKETS</a>  
                 <form class = 'formWrap'>
                     <h2><b>SUBSCRIBE</b></h2>
