--- a/tour.html
+++ b/tour.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<head>
-    <script src="https://kit.fontawesome.com/377d809d75.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Dokdo&display=swap" rel="stylesheet">
-    <link rel = "Stylesheet" href = "normalize.css" type = "text/css">
+<html lang = en>
+    <head>
+        <meta charset="UTF-8">
+        <title>The Bajs tour page</title>
+        <script src="https://kit.fontawesome.com/377d809d75.js" crossorigin="anonymous"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Dokdo&family=Sono:wght@200&display=swap" rel="stylesheet">
+        <link rel = "Stylesheet" href = "normalize.css" type = "text/css">
+    </head>
     <body>
         <nav>
             <a class = "top-head" id ='logo' href="index.html">
@@ -25,6 +29,72 @@
                 </a>
             </div>
         </nav>  
+        <main>
+            <div class = 'tourHead'>
+                <div class = 'tourRow'>
+                    <div class = 'date'>29 JUN 2023</div>
+                    <div class = 'country'>AMSTERDAM,NL</div>
+                    <div class = 'venue'>AMSTERDAM ARENA</div>
+                    <div class = 'ticket'>TICKETS</div>
+                </div> 
+                <div class = 'tourRow'>
+                    <div class = 'date'>28 JUN 2023</div>
+                    <div class = 'country'>AMSTERDAM,NL</div>
+                    <div class = 'venue'>AMSTERDAM ARENA</div>
+                    <div class = 'ticket'>TICKETS</div>
+                </div>        
+                <div class = 'tourRow'>
+                    <div class = 'date'>24 JUN 2023</div>
+                    <div class = 'country'>PARIS,FR</div>
+                    <div class = 'venue'>STADE DE FRANCE</div>
+                    <div class = 'ticket'>TICKETS</div>
+                </div> 
+                <div class = 'tourRow'>
+                    <div class = 'date'>23 JUN 2023</div>
+                    <div class = 'country'>PARIS,FR</div>
+                    <div class = 'venue'>STADE DE FRANCE</div>
+                    <div class = 'ticket'>TICKETS</div>
+                </div>
+                <div class = 'tourRow'>
+                    <div class = 'date'>20 JUN 2023</div>
+                    <div class = 'country'>COPENHAGEN,DK</div>
+                    <div class = 'venue'>PARKEN STADIUM</div>
+                    <div class = 'ticket'>TICKETS</div>
+                </div>        
+                <div class = 'tourRow'>
+                    <div class = 'date'>19 JUN 2023</div>
+                    <div class = 'country'>COPEHAGEN,DK</div>
+                    <div class = 'venue'>PARKEN STADIUM</div>
+                    <div class = 'ticket'>TICKETS</div>
+                </div> 
+                <div class = 'tourRow'>
+                    <div class = 'date'>16 JUN 2023</div>
+                    <div class = 'country'>Umeå,SW</div>
+                    <div class = 'venue'>NOLIA AB</div>
+                    <div class = 'ticket'>TICKETS</div>
+                </div>
+                <div class = 'tourRow'>
+                    <div class = 'date'>14 JUN 2023</div>
+                    <div class = 'country'>STOCKHOLM,SE</div>
+                    <div class = 'venue'>FRIENDS ARENA</div>
+                    <div class = 'ticket'>TICKETS</div>
+                </div>        
+                <div class = 'tourRow'>
+                    <div class = 'date'>9 JUN 2023</div>
+                    <div class = 'country'>LONDON,GB</div>
+                    <div class = 'venue'>WEMBLEY STADIUM</div>
+                    <div class = 'ticket'>TICKETS</div>
+                </div> 
+                <div class = 'tourRow'>
+                    <div class = 'date'>8 JUN 2023</div>
+                    <div class = 'country'>LONDON,GB</div>
+                    <div class = 'venue'>WEMBLEY STADIUM</div>
+                    <div class = 'ticket'>TICKETS</div>
+                </div>
+            </div>
+        </main>
+        <div class = footerWrap>
+            <div>@2022 THE BAJS</div>
+         </div> 
         <script src = 'script.js'></script>         
     </body>
-</head>
