All pages completed

--- a/band.html
+++ b/band.html
@@ -31,7 +31,7 @@
             </div>
         </nav>
         <div class = 'profile'>
-            <div class = 'image' style = 'background-image: url("Sebastian.png");'></div>           
+            <div class = 'image' style = 'background-image: url("images/Sebastian.png");'></div>           
             <div class = 'text'>
                 <h2 id = 'Sebastian'>Sebastian</h2>
                 <p>
@@ -55,10 +55,10 @@
                     <span>"Drain gang!!"</span>
                 </p>
             </div>
-            <div class = 'image' style = 'background-image: url("Moshi.png");'></div>
+            <div class = 'image' style = 'background-image: url("images/Moshi.png");'></div>
         </div>     
         <div class = 'profile'>
-            <div class = 'image' style = 'background-image: url("Apollon.jpg");'></div>
+            <div class = 'image' style = 'background-image: url("images/Apollon.jpg");'></div>
             <div class = 'text'>
                 <h2 id = 'Apollon'>Apollon</h2>
                 <p>
@@ -83,10 +83,10 @@
                     <span>"Hey buddy, I think you've got the wrong door, the leather club's two blocks down."</span>
                 </p>
             </div>
-            <div class = 'image' style = 'background-image: url("Lagoo.png");'></div>
+            <div class = 'image' style = 'background-image: url("images/Lagoo.png");'></div>
         </div>   
         <div class = 'profile'>
-            <div class = 'image' style = 'background-image: url("Mlemao.jpg");'></div>
+            <div class = 'image' style = 'background-image: url("images/Mlemao.jpg");'></div>
             <div class = 'text'>
                 <h2 id = 'Mlemao'>Mlemao</h2>
                 <p>
