--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
             </div>
         </nav>
         <main>            
-            <img src ='staticBand.gif' id="BandPlay" onclick="this.src = 'playBand.gif'" alt = 'The Bajs performing'>
+            <img src ='gif/staticBand.gif' id="BandPlay" onclick="this.src = 'gif/playBand.gif'" alt = 'The Bajs performing'>
             <h1 class="sectionHead">MUSIC</h1>            
             <div class = 'iframeWrap'>
                 <iframe src="https://www.youtube.com/embed/-GEHyAfV4OI" title="Debut Music" allowfullscreen></iframe>            
             </div>
             <h1 class="sectionHead">PHOTOS</h1>
             <div class = "photoAlbum">
-                <img src = 'Gallery1.jpg' alt = 'Band on tour'>
-                <img src = 'Gallery2.jpg' alt = 'Band on tour'>
-                <img src = 'Gallery3.jpg' alt = 'Band on tour'>
-                <img src = 'Gallery4.jpg' alt = 'Band on tour'>
-                <img src = 'Gallery5.jpg' alt = 'Band on tour'>
-                <img src = 'Gallery6.jpg' alt = 'Band on tour'>
+                <img src = 'images/Gallery1.jpg' alt = 'Band on tour'>
+                <img src = 'images/Gallery2.jpg' alt = 'Band on tour'>
+                <img src = 'images/Gallery3.jpg' alt = 'Band on tour'>
+                <img src = 'images/Gallery4.jpg' alt = 'Band on tour'>
+                <img src = 'images/Gallery5.jpg' alt = 'Band on tour'>
+                <img src = 'images/Gallery6.jpg' alt = 'Band on tour'>
             </div>
             <h1 class="sectionHead headBg">TOUR</h1>
             <div class = 'tourHead'>
