--- a/shop.html
+++ b/shop.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<head>
-    <script src="https://kit.fontawesome.com/377d809d75.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Dokdo&display=swap" rel="stylesheet">
-    <link rel = "Stylesheet" href = "style.css" type = "text/css">
+<html lang = en>
+    <head>
+        <meta charset = 'UTF-8'>
+        <title>the Bajs merch [age</title>
+        <script src="https://kit.fontawesome.com/377d809d75.js" crossorigin="anonymous"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Dokdo&display=swap" rel="stylesheet">
+        <link rel = "Stylesheet" href = "style.css" type = "text/css">
+    </head>
     <body>
         <nav>
             <a class = "top-head" id ='logo' href="index.html">
@@ -27,24 +31,57 @@
         </nav>  
         <grid class = 'merchDisplay'>
             <div class = 'merch1'>
-                <img src = 'poster1.png' id = 'brr'>
+                <img src = 'images/poster1.png'>
                 <h2>THE BAJS POSTER</h2>
                 <P>$20.00</P>
             </div>
-            <div class = 'merch2'>2</div>
-            <div class = 'merch3'>3</div>
-            <div class = 'merch4'>4</div>
-            <div class = 'merch5'>5</div>
-            <div class = 'merch6'>6</div>
-            <div class = 'merch7'>7</div>
-            <div class = 'merch8'>8</div>
-            <div class = 'merch9'>9</div>
+            <div class = 'merch2'>
+                <img src = 'images/toteBag.png'>
+                <h2>BAJS TOTE BAG</h2>
+                <p>$15.00</p>
+            </div>
+            <div class = 'merch3'>
+                <img src = 'images/shirt1.png' class = 'shirtFront'>
+                <img src = 'images/shirt1back.png' class = 'shirtBack'>
+                <h2>CLASSIC THE BAJS SHIRT</h2>
+                <p>$30.00</p>
+            </div>
+            <div class = 'merch4'>
+                <img src = 'images/cap.png'>
+                <h2>SPRAY ON HAT</h2>
+                <p>$25.00</p>
+            </div>
+            <div class = 'merch5'>
+                <img src = 'images/shirt2.png'>
+                <h2>RUN IT DOWN TIE DYE</h2>
+                <p>$30.00</p>
+            </div>
+            <div class = 'merch6'>
+                <img src = 'images/album1.png'>
+                <h2>RUN IT DOWN VINYL</h2>
+                <p>$25.00</p>
+            </div>
+            <div class = 'merch7'>
+                <img src = 'images/album2.png'>
+                <h2>FUSEFIRE VINYL</h2>
+                <p>$40.00   </p>
+            </div>
+            <div class = 'merch8'>
+                <img src = 'images/hoodieFront.png'>
+                <h2>THE BAJS HOODIE</h2>
+                <p>$30.00</p>
+            </div>
+            <div class = 'merch9'>
+                <img src = 'images/longShirt.png'>
+                <h2>WORLD TOUR LONG SLEEVE SHIRT</h2>
+                <p>$30.00</p>
+            </div>
             
         </grid>         
         <button onclick = 'scrollFunction()' id = 'buttonTop'> Back to top</button>
         <div class = footerWrap>
             <div>@2022 THE BAJS</div>
-         </div> 
+        </div> 
         <script>
             function scrollFunction() {
                 document.body.scrollTop = 0;
@@ -52,4 +89,3 @@
             }
         </script>
     </body>
-</head>
